--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -29,7 +29,7 @@
       <form class="form-inline my-2 my-lg-0">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="https://medium.com/@nireeksh19">My Blogs</a>
+              <a class="nav-link" href="https://medium.com/@nireeksh19" target="_blank">My Blogs</a>
             </li>
           </ul>
       </form>
