--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,4 +24,4 @@ background-size: cover;">
   </div>
   
 <app-skills></app-skills>
-<!-- <app-contact></app-contact> -->
+<app-contact></app-contact>
