--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,23 +1,48 @@
-<div style="background-image: url(../../assets/projback.gif);">
-<div style=" padding: 30px;">
-  <h1 style="font-style: italic; font-weight: bolder;text-align: center; color: beige;" class="display-4">MY PROJECTS</h1>
+<div class="styling">
+<div class="container" style=" padding: 30px;">
+  <h2 style="text-align: center;">My Projects👨‍💻</h2>
+
+<div class="row">
+  <div class="col">
+  <div *ngFor="let project of projects" style="margin-top: auto; justify-content: center;">
+    <div class="card" style="width: 100%;">
+    <div class="card-body">
+      <h5 class="card-title">{{project.id}} - {{project.name}}</h5>
+      <p class="card-text">{{project.description}}</p>
+      <p class="card-text">{{project.tech}}</p>
+      <p class="card-text">{{project.tools}}</p>
+      <a href={{project.link}} target="_blank" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+  <br><br>
+  </div>
+  
+
 </div>
-<div class="row" style="margin: 3px;">
-<div *ngFor="let project of projects" style="margin-top: auto;">
-      <div class="col-lg-4">
-        <div class="card" style="width: 24rem; background-color: rgb(255, 255, 255);">
-          <div class="card-body">
-            <h5 class="card-title">{{project.id}} - {{project.name}}</h5>
-            <p class="card-text">{{project.description}}</p>
-            <p class="card-text">{{project.tech}}</p>
-            <p class="card-text">{{project.tools}}</p>
-            <a href={{project.link}} target="_blank" class="btn btn-primary">Go somewhere</a>
+</div>
+
+
+
+
+<br>
+<br>
+<br>
+</div>
+</div>
+
+
+<!-- <div class="row" style="margin: 3px;">
+  <div *ngFor="let project of projects" style="margin-top: auto;">
+        <div class="col-lg-4">
+          <div class="card" style="width: auto; background-color: rgb(255, 255, 255);">
+            <div class="card-body">
+              <h5 class="card-title">{{project.id}} - {{project.name}}</h5>
+              <p class="card-text">{{project.description}}</p>
+              <p class="card-text">{{project.tech}}</p>
+              <p class="card-text">{{project.tools}}</p>
+              <a href={{project.link}} target="_blank" class="btn btn-primary">Go somewhere</a>
+            </div>
           </div>
         </div>
-      </div>
-  </div>
-</div>
-<br>
-<br>
-<br>
-</div>
+    </div>
+  </div> -->
