--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,193 @@
-<p>about works!</p>
+<div class="bg">
+  <br />
+  <h3 style="text-align: center; color: aliceblue">Internship Experience</h3>
+  <br />
+  <div class="timeline-fixed">
+    <div class="container-fixed left">
+      <div class="content-fixed">
+        <h2>July - Aug 2022</h2>
+        <p>
+          Angular Developer Intern <br />
+          Dlithe Consultancy Services Bangalore
+        </p>
+      </div>
+    </div>
+    <div class="container-fixed right">
+      <div class="content-fixed">
+        <h2>July 2022</h2>
+        <p>
+          Web Developer Intern<br />
+          LetsGrowMore Company
+        </p>
+      </div>
+    </div>
+    <div class="container-fixed left">
+      <div class="content-fixed">
+        <h2>Jan 2022 - Mar 2022</h2>
+        <p>Artificial Intelligence<br />Languify - 1stop</p>
+      </div>
+    </div>
+  </div>
+
+  <br />
+  <hr class="new3" />
+  <br />
+  <h3 style="text-align: center; color: aliceblue">
+    Co-curricular and extra-curricular activities
+  </h3>
+  <br />
+  <div class="timeline-fixed">
+    <div class="container-fixed left">
+      <div class="content-fixed">
+        <h2>Sep 2021 - Present</h2>
+        <p>
+          Student Ambassador- NMAMIT Nitte<br />
+          Jumpwhere (jumpwhere.com) They provide Job tips, interview tips, Job
+          vacancies and Job opportunities for job seekers.
+        </p>
+      </div>
+    </div>
+    <div class="container-fixed right">
+      <div class="content-fixed">
+        <h2>Sep 2020 - Present</h2>
+        <p>Volunteer - NSS NMAMIT<br /></p>
+      </div>
+    </div>
+    <div class="container-fixed left">
+      <div class="content-fixed">
+        <h2>Sep 2021 - July 2022</h2>
+        <p>
+          SIG Co-Head AIML<br />
+          Special Interest Group Co-Head for Domain Artificial Intelligence and
+          Machine Learning Domain in Computer Society of India (CSI) NMAMIT
+        </p>
+      </div>
+    </div>
+    <div class="container-fixed right">
+      <div class="content-fixed">
+        <h2>Sep 2021 - June 2022</h2>
+        <p>
+          Member - Finite Loop Club NMAMIT<br />
+          Technical club of NMAMIT, Lot of technical workshops and sessions are
+          hosted through them.
+        </p>
+      </div>
+    </div>
+  </div>
+  <br />
+
+  <!-- languages and hobbies -->
+
+  <h3 style="text-align: center; color: aliceblue">Languages Known:</h3>
+  <br />
+
+  <div class="center">
+    <table class="table table-responsive">
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col">Language</th>
+          <th scope="col">Speak</th>
+          <th scope="col">Read</th>
+          <th scope="col">Write</th>
+          <th scope="col">Proficiency</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <!-- <th scope="row">1</th> -->
+          <td>English</td>
+          <td>Yes</td>
+          <td>Yes</td>
+          <td>Yes</td>
+          <td>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+          </td>
+        </tr>
+        <tr>
+          <!-- <th scope="row">1</th> -->
+          <td>Hindi</td>
+          <td>Yes</td>
+          <td>Yes</td>
+          <td>Yes</td>
+          <td>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star"></span>
+          </td>
+        </tr>
+        <tr>
+          <!-- <th scope="row">1</th> -->
+          <td>Kannada</td>
+          <td>Yes</td>
+          <td>Yes</td>
+          <td>Yes</td>
+          <td>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star"></span>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <!-- hobbies
+      Body Building, Reading books, Listening Music -->
+  <h3 style="text-align: center; color: aliceblue">Hobbies</h3>
+  <br />
+  <!-- <div class="lefti">
+    <table class="table table-responsive">
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col">S.No</th>
+          <th scope="col">Hobbies</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>Body Building</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Reading Books</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Listening to music</td>
+        </tr>
+      </tbody>
+    </table>
+  </div> -->
+  <table class="table table-dark hobby">
+    <thead>
+        <tr>
+            <th scope="col">S.No</th>
+            <th scope="col">Hobbies</th>
+          </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>1</td>
+            <td>Body Building</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Reading Books</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Listening to music</td>
+          </tr>
+    </tbody>
+  </table>
+<br>
+  <h3 style="text-align: center; color: aliceblue;">Eat 🍴 Sleep 🛌🏻 Work 🏋🏻 Code 👨‍💻 Repeat 🔁</h3><br>
+</div>
