--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -2,7 +2,7 @@
 <br>
 <h2 style="text-align: center;">Education Details📚🎓</h2>
 <br>
-<table class="table table-striped table-dark table-responsive-sm">
+<table class="table table-striped table-dark table-responsive">
     <thead>
       <tr>
         <th scope="col">Qualification</th>
@@ -52,6 +52,8 @@
     </tbody>
     
   </table>
+  <br>
   <p class="hidden-mobile" style="color: rgb(181, 180, 180);">Note: If you are using mobile phones kindly scroll left/right because this table is made responsive:)</p>
+  <br>
 
 
