--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,6 +23,9 @@
             <a class="nav-link" href="#" routerLink="/about">About Me</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#" routerLink="/education">Education</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#" routerLink="/contact">Contact Me</a>
           </li>
       </ul>
