--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,3 @@
-<!-- heading -->
-
 <div class="jumbotron" style="color: white; background-image: url(../../assets/background.jpg); background-position: center;
 background-repeat: no-repeat;
 background-size: cover;">
@@ -24,4 +22,5 @@ background-size: cover;">
   </div>
   
 <app-skills></app-skills>
+<app-about></app-about>
 <app-contact></app-contact>
