--- a/src/app/certification/certification.component.html
+++ b/src/app/certification/certification.component.html
@@ -1,1 +1,91 @@
-<p>certification works!</p>
+<div class="hey">
+
+
+<div class="skills container">
+  <br />
+  <h2 style="text-align: center">
+    Certifications
+    <img style="width: 43px" src="../../assets/certificate.png" alt="" />
+  </h2>
+  <br />
+  <div class="row styling">
+    <div class="col-lg-6 col-sm-12 col-md-12">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">JavaScript Algorithms and Data Structures</h5>
+          <div class="card-text">
+            <p>Issued By : Freecodecamp.org</p>
+            <p>Date : 10/02/2022</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    
+    <div class="col-lg-6 col-sm-12 col-md-12">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title"> Artificial Intelligence Foundations: Machine Learning</h5>
+          <div class="card-text">
+            <p>Issued By : LinkedIn Learning</p>
+            <p>Date : 14/09/2021</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-lg-6 col-sm-12 col-md-12">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">NoSQL Data Management using MongoDB and Cassandra with Hands-On</h5>
+          <div class="card-text">
+            <p>Issued By : Skill Development in NMAMIT</p>
+            <p>Date : Summer vacation of second year 2021</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-lg-6 col-sm-12 col-md-12">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Responsive Web Design</h5>
+          <div class="card-text">
+            <p>Issued By : Freecodecamp.org</p>
+            <p>Date : 20/07/2021</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-lg-6 col-sm-12 col-md-12">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Java for Android</h5>
+          <div class="card-text">
+            <p>Issued By : 
+                Coursera
+            </p>
+            <p>Date : 30/08/2020</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-lg-6 col-sm-12 col-md-12">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">React </h5>
+          <div class="card-text">
+            <p>Issued By : HackerRank</p>
+            <p>Date : 19/02/2022</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
+  <br /><br />
+</div>
+</div>
