--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,12 @@
-<div class="jumbotron" style="color: white; background-image: url(../../assets/background.jpg); background-position: center;
+<div class="jumbotron effect" style=" background-image: url(../../assets/background.jpg); background-position: center;
 background-repeat: no-repeat;
 background-size: cover;">
   <div class="row">
     <div class="col-lg-9">
-      <h1 class="display-4" style=" font-weight: bold; font-style:italic">Hello, world! I am NIREEKSH </h1><br>
-      <h3 class="lead">Looking for an opportunity to Secure a responsible career to fully utilize my training and skills, while making a significant contribution to the success of the company</h3><br>
+      <h1 class="display-4" style=" font-weight: bold; font-style:italic"><span style="color: white;">Hello World ..</span> I am NIREEKSH </h1><br>
+      <h3 class="lead" style="font-weight:lighter; color:aliceblue ">Looking for an opportunity to Secure a responsible career to fully utilize my training and skills, while making a significant contribution to the success of the company</h3><br>
       <hr class="my-4">
-      <p>Looking for a Role of Full Stack Developer</p>
+      <p style="font-weight:lighter; color:aliceblue ">Looking for a Role of Full Stack Developer</p>
       <p class="lead"><br>
         <a class="btn btn-primary btn-lg" role="button" href="../../assets/Nireeksh.pdf" download>Download CV</a>
         <br><br>
