--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,14 +1,5 @@
  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" />
-<!-- 
-<link
-  rel="stylesheet"
-  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-/>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
-
 <div class="container">
   <div class="contact-section">
     <h2 class="ct-section-head">CONTACT US</h2>
@@ -80,9 +71,7 @@
         <div class="location">
           <h2>Visit</h2>
           <p>
-            N M A M institute <br />
-            of Technology (NMAMIT) <br />
-            Nitte <br />
+            N M A M institute of Technology (NMAMIT) Nitte <br />
             <br />
             <a class="btn btn-accent" href="" target="_blank"
               ><img
