--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,50 +5,40 @@
       <!-- Section: Social media -->
       <section class="mb-4">
         <!-- Facebook -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        <a class="btn btn-outline-light btn-floating m-1" href="https://www.linkedin.com/in/nireekshshetty19/" target="_blank" role="button"
           ><i class="fab fa-facebook-f"></i
         ></a>
   
         <!-- Twitter -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        <a class="btn btn-outline-light btn-floating m-1" href="https://www.linkedin.com/in/nireekshshetty19/" target="_blank" role="button"
           ><i class="fab fa-twitter"></i
         ></a>
   
         <!-- Google -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        <a class="btn btn-outline-light btn-floating m-1"href="https://www.linkedin.com/in/nireekshshetty19/" target="_blank" role="button"
           ><i class="fab fa-google"></i
         ></a>
   
         <!-- Instagram -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        <a class="btn btn-outline-light btn-floating m-1"href="https://www.linkedin.com/in/nireekshshetty19/" target="_blank" role="button"
           ><i class="fab fa-instagram"></i
         ></a>
   
         <!-- Linkedin -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        <a class="btn btn-outline-light btn-floating m-1" href="https://www.linkedin.com/in/nireekshshetty19/" target="_blank" role="button"
           ><i class="fab fa-linkedin-in"></i
         ></a>
-  
+        <!--  -->
         <!-- Github -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/nireeksh19" target="_blank" role="button"
           ><i class="fab fa-github"></i
         ></a>
       </section>
-      <!-- Section: Social media -->
-  
-      <!-- Section: Form -->
-    
-      <!-- Section: Form -->
-  
-      <!-- Section: Text -->
-      <!-- Section: Links -->
+      
     </div>
-    <!-- Grid container -->
-  
-    <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2022 Copyright:
-      <a class="text-white" href="https://mdbootstrap.com/">Nireeksh</a>
+      <a class="text-white" href="https://github.com/nireeksh19" target="_blank">Nireeksh</a>
     </div>
     <!-- Copyright -->
   </footer>
