--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,3 +4,8 @@ a{
 .skills{
     background-color: rgba(255, 255, 255, 0.536);
 }
+.effect{
+    font-weight: bold;
+    color: black;
+    font-family: 'Times New Roman', Times, serif;
+}
