--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@ background-size: cover;">
       <hr class="my-4">
       <p style="font-weight:lighter; color:aliceblue ">Looking for a Role of Full Stack Developer</p>
       <p class="lead"><br>
-        <a class="btn btn-primary btn-lg" role="button" href="../../assets/Nireeksh.pdf" download>Download Resume</a>
+        <a class="btn btn-primary btn-lg" role="button" href="../../assets/Nireeksh_Resume.pdf" download>Download Resume</a>
         <br><br>
       </p>
     </div>
