--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,9 +6,9 @@ background-size: cover;">
       <h1 class="display-4" style=" font-weight: bold; font-style:italic"><span style="color: white;">Hello World ..</span> I am NIREEKSH </h1><br>
       <h3 class="lead" style="font-weight:lighter; color:aliceblue ">Looking for an opportunity to Secure a responsible career to fully utilize my training and skills, while making a significant contribution to the success of the company</h3><br>
       <hr class="my-4">
-      <p style="font-weight:lighter; color:aliceblue ">Looking for a Role of Full Stack Developer</p>
+      <p style="font-weight:lighter; color:aliceblue ">Looking for Software Engineering Job role</p>
       <p class="lead"><br>
-        <a class="btn btn-primary btn-lg" role="button" href="../../assets/Nireeksh_Resume.pdf" download>Download Resume</a>
+        <a class="btn btn-primary btn-lg" role="button" href="../../assets/Nireeksh_ISE.pdf" download>Download Resume</a>
         <br><br>
       </p>
     </div>
